<resources>
    <string name="app_name">NatureInsight</string>
    <string name="disconnected">You are disconnected</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="connected">You are connected as:\n</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="history">History</string>
    <string name="sort_hint">Search a plant</string>
    <string name="search">Search</string>
    <string name="learn_more">Learn More</string>
    <string name="common_name">Common Name</string>
    <string name="Scient_name">Scientific Name</string>
    <string name="scores">Scores</string>
    <string name="ni_fixation">Nitrogen fixation:</string>
    <string name="sol_structure">Soil structure:</string>
    <string name="water_retention">Water retention:</string>
    <string name="observation">Observation</string>
    <string name="observation_date">Observation date:</string>
    <string name="position">Position:</string>
    <string name="confidence">Confidence level of identification:</string>
    <string name="altitude">Altitude:</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="create_account">Create an account</string>
    <string name="plant_image">Plant Image</string>
    <string name="take_photo">Take Photo</string>
    <string name="please_login">Please log in</string>
    <string name="logged_out_success">Logged out successfully</string>
    <string name="account">Account</string>
    <string name="camera">Camera</string>
    <string name="fill_fields">Please fill in all fields</string>
    <string name="signup_success">Sign up successful!</string>
    <string name="signup_failed">Sign up failed: %1$s</string>
    <string name="login_success">Login successful!</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="sign_in_history">Please sign in to view your history</string>
    <string name="session_expired">Your session has expired. Please sign in again.</string>
    <string name="error_loading_history">Error loading history: %1$s</string>
    <string name="observation_saved">Observation saved successfully!</string>
    <string name="error_saving">Error saving: %1$s</string>
    <string name="error_uploading">Error uploading image: %1$s</string>
    <string name="error_loading_image">Failed to load image</string>
    <string name="permission_denied">Permission denied</string>
    <string name="unknown">Unknown</string>
    <string name="latitude">Lat:</string>
    <string name="longitude">Long:</string>
    <string name="save_success">Save successful</string>
    <string name="update_failed">Error: update was not applied</string>
    <string name="record_not_found_after_update">Error: record not found after update</string>
    <string name="verification_error">Error during verification: %1$s</string>
    <string name="save_error">Error saving comment: %1$s</string>
    <string name="record_not_found">Record not found</string>
    <string name="comment_label">Comment :</string>
    <string name="add_comment">Add a Comment</string>
    <string name="save_comment">Save Comment</string>
    <string name="comment_input_hint">Write your comment here...</string>
</resources>