<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F8F2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#35CA00"
                android:padding="12dp"
                android:orientation="horizontal"
                android:radius="10dp">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/plant_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/common_name"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="#000" />

                    <TextView
                        android:id="@+id/plant_scientific_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Scient_name"
                        android:textSize="14sp"
                        android:textColor="#888" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/plant_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icons8camera24" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scores"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#35CA00"
                android:padding="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ni_fixation"
                    android:text="@string/ni_fixation" />
                <com.example.natureinsight.GradientValueView
                    android:id="@+id/ni_fixation_value"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/sol_structure"
                    android:text="@string/sol_structure" />
                <com.example.natureinsight.GradientValueView
                    android:id="@+id/sol_structure_value"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/water_retention"
                    android:text="@string/water_retention" />
                <com.example.natureinsight.GradientValueView
                    android:id="@+id/water_retention_value"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/observation"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:orientation="vertical"
                android:background="#35CA00"
                android:layout_marginTop="8dp"
                android:radius="10dp">

                <TextView
                    android:id="@+id/observation_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/observation_date"
                    android:textColor="#494A25" />

                <TextView
                    android:id="@+id/position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/position"
                    android:textColor="#494A25" />

                <TextView
                    android:id="@+id/confidence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confidence"
                    android:textColor="#494A25" />

                <TextView
                    android:id="@+id/altitude"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altitude"
                    android:textColor="#494A25" />
            </LinearLayout>
            <TextView
                android:id="@+id/comment_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comment_label"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/existing_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:background="#DDFFDD"
                android:textColor="#000"
                android:visibility="gone" />

            <EditText
                android:id="@+id/comment_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/comment_input_hint"
                android:visibility="gone"
                android:background="#FFFFFF"
                android:layout_marginTop="8dp"
                android:padding="8dp" />

            <Button
                android:id="@+id/save_comment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_comment"
                android:layout_marginTop="8dp"
                android:layout_gravity="bottom|center_horizontal"
                android:backgroundTint="#228100"
                android:visibility="gone" />
            <Button
                android:id="@+id/add_comment_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_comment"
                android:layout_gravity="bottom|center_horizontal"
                android:backgroundTint="#228100"
                android:layout_marginTop="16dp" />
        </LinearLayout>

    </ScrollView>
    <Button
        android:id="@+id/learn_more_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/learn_more"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="70dp"
        android:backgroundTint="#228100"
        android:textColor="#FFFFFF" />

    <include
    layout="@layout/bottom_nav"
    android:layout_gravity="bottom"
    android:layout_width="match_parent"
    android:layout_height="60dp" />
</FrameLayout>
