<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F8F2"
    android:padding="24dp">

    <ImageView
        android:id="@+id/user_icon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/icons8user90"
        android:layout_marginTop="40dp"
        android:contentDescription="Icône utilisateur" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_icon"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">


        <EditText
            android:id="@+id/username"
            android:hint="@string/username"
            android:background="@drawable/edittext_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp" />

        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/edittext_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/signup_button"
            android:text="@string/create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#228100"/>

    </LinearLayout>
</RelativeLayout>
