<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F8F2">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:padding="24dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/title_encyclopedia"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/encyclopedia"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="#000" />

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/icons8search64"
                android:contentDescription="Recherche"
                android:padding="4dp"
                android:clickable="true"
                android:focusable="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/search_container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/search_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sort_hint"
                android:background="@drawable/edittext_background"
                android:padding="8dp" />

            <Button
                android:id="@+id/search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#228100"
                android:text="@string/search" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/encyclopedia_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scrollbars="vertical" />
    </LinearLayout>

    <include
        layout="@layout/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom" />
</FrameLayout>
